--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-06-13  Peter O'Gorman  <peter@pogma.com>
+
+	Support ifort on darwin.
+	* libltdl/m4/libtool.m4 (_LT_DARWIN_LINKER_FEATURES): Build
+	shared libraries with ifort.
+	Reported by Christopher Hulbert.
+
 2008-06-01  Charles Wilson  <libtool@cwilson.fastmail.fm>
 
 	[mingw] fix cross-compile-with-wine case
