--- a/THANKS
+++ b/THANKS
@@ -135,6 +135,7 @@
   Tom Tromey			tromey@cygnus.com
   Tor Lillqvist			tml@iki.fi
   Ulrich Drepper		drepper@ipd.info.uni-karlsruhe.de
+  Vincent Lefevre		vincent@vinc17.org
   Xavier Pianet			xavier@xingo.com
   Юрий Андреевич Пухальский	pooh@cryptopro.ru
 
