--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-31  Paolo Bonzini  <bonzini@gnu.org>
+
+	* ltmain.m4sh (func_emit_cwrapperexe_src): Factor
+	multiple closed braces into the next cat command.
+
 2008-06-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [linux] <icc, icpc>:
