--- a/THANKS
+++ b/THANKS
@@ -136,6 +136,7 @@
   Tor Lillqvist			tml@iki.fi
   Ulrich Drepper		drepper@ipd.info.uni-karlsruhe.de
   Vincent Lefevre		vincent@vinc17.org
+  Vincent Torri			vtorri@univ-evry.fr
   Xavier Pianet			xavier@xingo.com
   Юрий Андреевич Пухальский	pooh@cryptopro.ru
 
