* NEWS: Minor fixups.
Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* NEWS: Minor fixups.
+
 2008-08-01  Gary V. Vaughan  <gary@gnu.org>
 
 	Bring NEWS up to date.
