On Windows, find potential libs regardless of file name case.
* libltdl/m4/libtool.m4 (_LT_CHECK_MAGIC_METHOD),
libltdl/config/ltmain.m4sh (func_mode_link): On Windows,
find potential libs regardless of file name case.
* tests/nocase.at: New test, to check for regressions
of the above.
* Makefile.am: Add above new test.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-08-02  Peter Rosin  <peda@lysator.liu.se>
 
+	On Windows, find potential libs regardless of file name case.
+	* libltdl/m4/libtool.m4 (_LT_CHECK_MAGIC_METHOD),
+	libltdl/config/ltmain.m4sh (func_mode_link): On Windows,
+	find potential libs regardless of file name case.
+	* tests/nocase.at: New test, to check for regressions
+	of the above.
+	* Makefile.am: Add above new test.
+
+2008-08-02  Peter Rosin  <peda@lysator.liu.se>
+
 	Allow Microsoft lib to be used as the archiver.
 	* libltdl/m4/libtool.m4 (_LT_PROG_AR): New macro, detect the
 	interface used by the archiver. In particular, add the AR_SEP
