--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@ New in 2.2.8 2008-??-??: git version 2.2.7a, Libtool team:
     default informational messages.
   - Improved support for 64bit Windows (mingw64).
   - Improved support for cegcc (Windows CE/PocketPC).
+  - Initial support for Microsoft Visual C w/o wrapper scripts.
 
 * Bug fixes:
 
