--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-06  Steve Ellcey  <sje@cup.hp.com>
+
+	Use -fPIC with GCC on HP-UX/ia64.
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC, _LT_LINKER_SHLIBS)
+	[ia64-*-hpux*]: Specify -fPIC when using GCC to build shared
+	libraries.
+
 2008-08-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* NEWS: Minor fixups.
