--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-07  DJ Delorie  <dj@redhat.com>
+
+	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [tpf]
+	<library_names_spec>: Fix typo in variable name.
+
 2008-08-06  Steve Ellcey  <sje@cup.hp.com>
 
 	Use -fPIC with GCC on HP-UX/ia64.
