* HACKING: Update for git, fix some minor nits.
Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* HACKING: Update for git, fix some minor nits.
+
 2008-08-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Remove use of exit in configure test sources.
