--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/static.at (ccache -all-static): Ignore compiler stderr.
+	Reported by Peter Rosin.
+
 2008-08-15  Peter Rosin  <peda@lysator.liu.se>
 
 	* tests/stresstest.at [MSVC]: dllimport all imported
