--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-18  Peter Rosin  <peda@lysator.liu.se>
+
+	* .gitignore: Ignore *.obj files for MSVC (and w32).
+
 2008-08-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 (LT_PATH_NM): Move setting of
