Disallow `-L path', do not misparse it silently.
* libltdl/config/ltmain.m4sh (func_mode_link): Diagnose `-L'
without argument, and `-L path', i.e., with a space.
* tests/fail.at (Failure tests): Test for these failures.
* THANKS: Update.
Report by Olaf Lenz.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/THANKS
+++ b/THANKS
@@ -111,6 +111,7 @@
   Michael Haubenwallner		michael.haubenwallner@salomon.at
   Mike Frysinger		vapier@gentoo.org
   Nix				nix@esperi.org.uk
+  Olaf Lenz			olenz@fias.uni-frankfurt.de
   Olly Betts			olly@muscat.co.uk
   Patrick Welche		prlw1@newn.cam.ac.uk
   Paul Eggert			eggert@twinsun.com
