--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-08-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Disallow `-L path', do not misparse it silently.
+	* libltdl/config/ltmain.m4sh (func_mode_link): Diagnose `-L'
+	without argument, and `-L path', i.e., with a space.
+	* tests/fail.at (Failure tests): Test for these failures.
+	* THANKS: Update.
+	Report by Olaf Lenz.
+
 2008-08-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Avoid test failure due to broken dlpreloading of shared library.
