--- a/THANKS
+++ b/THANKS
@@ -124,6 +124,7 @@
   Robert Ögren			lists@roboros.com
   Roberto Bagnara		bagnara@cs.unipr.it
   Roland Mainz			roland.mainz@nrubsig.org
+  Sam Thursfield		ssssam@gmail.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
   Simon Josefsson		jas@extundo.com
   Stephan Kulow			coolo@kde.org
